@@ -1,6 +1,7 @@
 2012-08-24  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Added interface tx_solr_GarbageCollectorPostProcessor
+	* Added interface tx_solr_IndexQueueInitializationPostProcessor
 
 2012-08-23  Ingo Renner  <ingo.renner@dkd.de>
 
